# PhotoLaboratory-Application-CPP-Qt

./: README.md  README_RUS.md
src/: CMakeLists.txt  Makefile  main.cc
src/Controller/: filtercontroller.h
src/Model/FilterHelper/: basefilter.cc  basefilter.h  filterhelper.h  filtertypetraits.h
src/Model/FilterHelper/FilterManagers/: colorcorrectionfiltermanager.h  convolutionfiltermanager.h  nonconvolutionfiltermanager.h
src/Model/FilterHelper/Filters/ColorCorrectionFilters/: colorcorrectionfilters.cc  colorcorrectionfilters.h
src/Model/FilterHelper/Filters/ConvolutionFilters/: convolutionfilters.cc  convolutionfilters.h
src/Model/FilterHelper/Filters/NonConvolutionFilters/: nonconvolutionfilters.cc  nonconvolutionfilters.h
src/Model/FilterModel/: filtermodel.h
src/Test/: CMakeLists.txt  test.cc
src/View/: PhotoLaboratoryIcon.icns  PhotoLaboratoryView.pro  customkernelview.cc  customkernelview.h  customkernelview.ui  icon.qrc  icon.rc  view.cc  view.h  view.ui  view_help.cc
